; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrdhost.c___rrdhost_check_rdlock.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrdhost.c___rrdhost_check_rdlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@D_RRDHOST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Checking read lock on host '%s'\00", align 1
@.str.1 = private unnamed_addr constant [93 x i8] c"RRDHOST '%s' should be read-locked, but it is not, at function %s() at line %lu of file '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__rrdhost_check_rdlock(%struct.TYPE_3__* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* @D_RRDHOST, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @debug(i32 %10, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = call i32 @netdata_rwlock_trywrlock(i32* %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @fatal(i8* getelementptr inbounds ([93 x i8], [93 x i8]* @.str.1, i64 0, i64 0), i32 %23, i8* %24, i64 %25, i8* %26)
  br label %28

28:                                               ; preds = %20, %4
  ret void
}

declare dso_local i32 @debug(i32, i8*, i32) #1

declare dso_local i32 @netdata_rwlock_trywrlock(i32*) #1

declare dso_local i32 @fatal(i8*, i32, i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
